website first commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-hello world
+<!doctype html>
+<html>
+
+<head>
+  <title>Haokun Tian</title>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/frame.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="css/controls.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="css/custom.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="asset/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="asset/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="asset/favicon-16x16.png">
+  <link rel="manifest" href="asset/site.webmanifest">
+  <link rel="mask-icon" href="asset/safari-pinned-tab.svg" color="#000000">
+  <link rel="shortcut icon" href="asset/favicon.ico">
+  <meta name="msapplication-TileColor" content="#603cba">
+  <meta name="msapplication-config" content="asset/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+  <div class="menu-container"></div>
+  <div class="content-container">
+    <div class="content">
+      <div class="content-table flex-column">
+        <div class="flex-row">
+          <div class="flex-item flex-column">
+            <img class="image" id="me" src="img/me.jpg">
+          </div>
+          <div class="flex-item flex-column">
+            <h2>Haokun Tian</h2>
+            <p class="text">
+              PhD student in <a href="https://www.aim.qmul.ac.uk" target="_blank">AI & Music CDT</a><br>
+              haokun.tian@qmul.ac.uk<br>
+              <a href="https://comma.eecs.qmul.ac.uk" target="_blank">Communication Acoustics Lab</a>, <a href="http://c4dm.eecs.qmul.ac.uk" target="_blank">Center for Digital Music</a><br>
+              Queen Mary University of London, UK<br>
+            </p>
+          </div>
+        </div>
+        <div class="flex-row">
+          <div class="flex-item flex-column">
+            <h2>About</h2>
+            <hr>
+            <p class="text">
+              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="http://bela.io" target="_blank">Bela</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu Inc.</a>, where I launched a beat and downbeat tracking system.
+            </p>
+            <h2 id="conference-paper">Publications</h2>
+            <hr>
+            <!--This list is reversed on the website due to reverse number listing-->
+            <ol class="publication">
+              <li>
+                <p class="text-small-margin">
+                  <b>Haokun Tian</b>, Kun Liu, and Magdalena Fuentes. Beat and Downbeat Tracking with Generative Embeddings. <i>Late Breaking Demo in the International Society for Music Information Retrieval Conference (ISMIR), 2023.</i> <<a href="asset/2023_ismir_beat.pdf" target="_blank">pdf</a>, <a href="https://github.com/tiianhk/jukebeat" target="_blank">code</a>>
+                </p>
+              </li>
+              <li>
+                <p class="text-small-margin">
+                  Charalampos Saitis, <b>Haokun Tian</b>, Jordie Shier, Bleiz Macsen Del Sette. Timbre Tools for the Digital Instrument Maker. <i>CHIME Annual Music and Human-Computer Interaction Workshop, 2023.</i> <<a href="https://static1.squarespace.com/static/6227c31a43daf21135453605/t/656079a37f631a6d3714a8b9/1700821412182/CHIME+Abstract+-+Saitis+et+al.pdf" target="_blank">pdf</a>>
+                </p>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
