--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>About</h2>
             <hr>
             <p class="text">
-              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="http://bela.io" target="_blank">Bela</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu Inc.</a>, where I launched a beat and downbeat tracking system.
+              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="http://bela.io" target="_blank">Bela</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu</a>, where I launched a beat and downbeat tracking system.
             </p>
             <h2 id="conference-paper">Publications</h2>
             <hr>
