--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>About</h2>
             <hr>
             <p class="text">
-              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="http://bela.io" target="_blank">Bela</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu</a>, where I launched a beat and downbeat tracking system.
+              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="https://csl.sony.fr/member/stefan-lattner-phd/" target="_blank">Dr Stefan Lattner</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu</a>, where I launched a beat and downbeat tracking system.
             </p>
             <h2 id="conference-paper">Publications</h2>
             <hr>
@@ -57,9 +57,19 @@
                   <b>Haokun Tian</b>, Kun Liu, and Magdalena Fuentes. Beat and Downbeat Tracking with Generative Embeddings. <i>Late Breaking Demo in the International Society for Music Information Retrieval Conference (ISMIR), 2023.</i> <<a href="asset/2023_ismir_beat.pdf" target="_blank">pdf</a>, <a href="https://github.com/tiianhk/jukebeat" target="_blank">code</a>>
                 </p>
               </li>
-              <li>
+              <!-- <li>
                 <p class="text-small-margin">
                   Charalampos Saitis, <b>Haokun Tian</b>, Jordie Shier, Bleiz Macsen Del Sette. Timbre Tools for the Digital Instrument Maker. <i>CHIME Annual Music and Human-Computer Interaction Workshop, 2023.</i> <<a href="https://static1.squarespace.com/static/6227c31a43daf21135453605/t/656079a37f631a6d3714a8b9/1700821412182/CHIME+Abstract+-+Saitis+et+al.pdf" target="_blank">pdf</a>>
+                </p>
+              </li> -->
+              <li>
+                <p class="text-small-margin">
+                  Alexander Williams, <b>Haokun Tian</b>, Stefan Lattner, and Mathieu Barthet, Charalampos Saitis. Deep learning-based audio representations for the analysis and visualisation of electronic dance music DJ mixes. <i>AES International Symposium on AI and the Musician, 2024.</i> <<a href="https://comma.eecs.qmul.ac.uk/assets/pdf/DJ_Timbre_Tool_AES_Paper.pdf" target="_blank">pdf</a>, <a href="https://github.com/alexjameswilliams/EDMAudioRepresentations" target="_blank">code</a>>
+                </p>
+              </li>
+              <li>
+                <p class="text-small-margin">
+                  Charalampos Saitis, Bleiz Macsen Del Sette, Jordie Shier, <b>Haokun Tian</b>, Shuoyang Zheng, Sophie Skach, Courtney N. Reed, Corey Ford. Timbre Tools: Ethnographic Perspectives on Timbre and Sonic Cultures in Hackathon Designs. <i>International Audio Mostly Conference, 2024.</i> <<a href="https://dl.acm.org/doi/pdf/10.1145/3678299.3678322" target="_blank">pdf</a>>
                 </p>
               </li>
             </ol>
