--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>About</h2>
             <hr>
             <p class="text">
-              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="https://csl.sony.fr/member/stefan-lattner-phd/" target="_blank">Dr Stefan Lattner</a> on the project "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com/en" target="_blank">Xiaohongshu</a>, where I launched a beat and downbeat tracking system.
+              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="https://csl.sony.fr/member/stefan-lattner-phd/" target="_blank">Dr Stefan Lattner</a> on the topic "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com" target="_blank">Xiaohongshu (RedNote)</a>.
             </p>
             <h2 id="conference-paper">Publications</h2>
             <hr>
@@ -72,7 +72,30 @@
                   Charalampos Saitis, Bleiz Macsen Del Sette, Jordie Shier, <b>Haokun Tian</b>, Shuoyang Zheng, Sophie Skach, Courtney N. Reed, Corey Ford. Timbre Tools: Ethnographic Perspectives on Timbre and Sonic Cultures in Hackathon Designs. <i>International Audio Mostly Conference, 2024.</i> <<a href="https://dl.acm.org/doi/pdf/10.1145/3678299.3678322" target="_blank">pdf</a>>
                 </p>
               </li>
+              <li>
+                <p class="text-small-margin">
+                  <b>Haokun Tian</b>, Stefan Lattner, Brian McFee, Charalampos Saitis. Hybrid Losses for Hierarchical Embedding Learning. <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025.</i> <<a href="https://arxiv.org/abs/2501.12796" target="_blank">arxiv</a>, <a href="https://github.com/tiianhk/label-metric" target="_blank">code</a>>
+                </p>
+              </li>
             </ol>
+          </div>
+        </div>
+        <div class="flex-row">
+          <div class="flex-item flex-column full-width">
+            <h2 id="list-of-projects">Projects</h2>
+            <hr>
+          </div>
+        </div>
+        <div class="flex-row">
+          <div class="flex-item flex-item-stretch flex-column">
+            <img class="image max-width-400" src="img/maxmcp.gif">
+          </div>
+          <div class="flex-item flex-item-stretch-4 flex-column">
+            <p class="text">
+              <a class="highlight-text" href="https://github.com/tiianhk/MaxMSP-MCP-Server" target="_blank">MCP (Model Context Protocol) Server for Max (Max/MSP/Jitter)</a><br>
+              w/ Shuoyang Zheng<br>
+              Enabling LLMs to directly understand and generate Max patches.
+            </p>
           </div>
         </div>
       </div>
