--- a/index.html
+++ b/index.html
@@ -80,24 +80,29 @@
             </ol>
           </div>
         </div>
+        <!--Start Gallery-->
         <div class="flex-row">
           <div class="flex-item flex-column full-width">
-            <h2 id="list-of-projects">Projects</h2>
+            <h2 id="gallery">Gallery</h2>
             <hr>
           </div>
         </div>
-        <div class="flex-row">
-          <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/maxmcp.gif">
-          </div>
-          <div class="flex-item flex-item-stretch-4 flex-column">
-            <p class="text">
-              <a class="highlight-text" href="https://github.com/tiianhk/MaxMSP-MCP-Server" target="_blank">MCP (Model Context Protocol) Server for Max (Max/MSP/Jitter)</a><br>
+        <div class="gallery add-top-margin-small add-bottom-margin-small">
+          <div class="flex-column">
+            <img src="img/maxmcp.gif">
+            <h3>MaxMSP-MCP Server</h3>
+            <div>
               w/ Shuoyang Zheng<br>
               Enabling LLMs to directly understand and generate Max patches.
-            </p>
+            </div>
+            <div>
+              <a href="https://github.com/tiianhk/MaxMSP-MCP-Server" target="_blank">Code</a>
+              &nbsp;|&nbsp;
+              <a href="https://www.youtube.com/playlist?list=PLKP2B6jp8g27b1y9NFa_gqDK2x-tjYGkz" target="_blank">Video</a>
+            </div>
           </div>
         </div>
+        <!--End Gallery-->
       </div>
     </div>
   </div>
