--- a/index.html
+++ b/index.html
@@ -54,27 +54,34 @@
             <ol class="publication">
               <li>
                 <p class="text-small-margin">
-                  <b>Haokun Tian</b>, Kun Liu, and Magdalena Fuentes. Beat and Downbeat Tracking with Generative Embeddings. <i>Late Breaking Demo in the International Society for Music Information Retrieval Conference (ISMIR), 2023.</i> <<a href="asset/2023_ismir_beat.pdf" target="_blank">pdf</a>, <a href="https://github.com/tiianhk/jukebeat" target="_blank">code</a>>
+                  <b>Beat and Downbeat Tracking with Generative Embeddings</b>
+                  <<a href="asset/2023_ismir_beat.pdf" target="_blank">pdf</a>, <a href="https://github.com/tiianhk/jukebeat" target="_blank">code</a>><br>
+                  <b>Haokun Tian</b>, Kun Liu, and Magdalena Fuentes<br>
+                  <i>Late Breaking Demo in the International Society for Music Information Retrieval Conference (ISMIR), 2023</i>
                 </p>
               </li>
               <!-- <li>
                 <p class="text-small-margin">
-                  Charalampos Saitis, <b>Haokun Tian</b>, Jordie Shier, Bleiz Macsen Del Sette. Timbre Tools for the Digital Instrument Maker. <i>CHIME Annual Music and Human-Computer Interaction Workshop, 2023.</i> <<a href="https://static1.squarespace.com/static/6227c31a43daf21135453605/t/656079a37f631a6d3714a8b9/1700821412182/CHIME+Abstract+-+Saitis+et+al.pdf" target="_blank">pdf</a>>
+                  <b>Deep Learning-Based Audio Representations for the Analysis and Visualisation of Electronic Dance Music DJ Mixes</b>
+                  <<a href="https://comma.eecs.qmul.ac.uk/assets/pdf/DJ_Timbre_Tool_AES_Paper.pdf" target="_blank">pdf</a>, <a href="https://github.com/alexjameswilliams/EDMAudioRepresentations" target="_blank">code</a>><br>
+                  Alexander Williams, <b>Haokun Tian</b>, Stefan Lattner, and Mathieu Barthet, Charalampos Saitis<br>
+                  <i>AES International Symposium on AI and the Musician, 2024</i>
                 </p>
               </li> -->
               <li>
                 <p class="text-small-margin">
-                  Alexander Williams, <b>Haokun Tian</b>, Stefan Lattner, and Mathieu Barthet, Charalampos Saitis. Deep learning-based audio representations for the analysis and visualisation of electronic dance music DJ mixes. <i>AES International Symposium on AI and the Musician, 2024.</i> <<a href="https://comma.eecs.qmul.ac.uk/assets/pdf/DJ_Timbre_Tool_AES_Paper.pdf" target="_blank">pdf</a>, <a href="https://github.com/alexjameswilliams/EDMAudioRepresentations" target="_blank">code</a>>
+                  <b>Timbre Tools: Ethnographic Perspectives on Timbre and Sonic Cultures in Hackathon Designs</b>
+                  <<a href="https://dl.acm.org/doi/pdf/10.1145/3678299.3678322" target="_blank">pdf</a>><br>
+                  Charalampos Saitis, Bleiz Macsen Del Sette, Jordie Shier, <b>Haokun Tian</b>, Shuoyang Zheng, Sophie Skach, Courtney N. Reed, Corey Ford<br>
+                  <i>International Audio Mostly Conference, 2024</i><br>
                 </p>
               </li>
               <li>
                 <p class="text-small-margin">
-                  Charalampos Saitis, Bleiz Macsen Del Sette, Jordie Shier, <b>Haokun Tian</b>, Shuoyang Zheng, Sophie Skach, Courtney N. Reed, Corey Ford. Timbre Tools: Ethnographic Perspectives on Timbre and Sonic Cultures in Hackathon Designs. <i>International Audio Mostly Conference, 2024.</i> <<a href="https://dl.acm.org/doi/pdf/10.1145/3678299.3678322" target="_blank">pdf</a>>
-                </p>
-              </li>
-              <li>
-                <p class="text-small-margin">
-                  <b>Haokun Tian</b>, Stefan Lattner, Brian McFee, Charalampos Saitis. Hybrid Losses for Hierarchical Embedding Learning. <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025.</i> <<a href="https://arxiv.org/abs/2501.12796" target="_blank">arxiv</a>, <a href="https://github.com/tiianhk/label-metric" target="_blank">code</a>>
+                  <b>Hybrid Losses for Hierarchical Embedding Learning</b>
+                  <<a href="https://arxiv.org/abs/2501.12796" target="_blank">arXiv</a>, <a href="https://github.com/tiianhk/label-metric" target="_blank">code</a>><br>
+                  <b>Haokun Tian</b>, Stefan Lattner, Brian McFee, Charalampos Saitis<br>
+                  <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025</i><br>
                 </p>
               </li>
             </ol>
@@ -83,7 +90,7 @@
         <!--Start Gallery-->
         <div class="flex-row">
           <div class="flex-item flex-column full-width">
-            <h2 id="gallery">Gallery</h2>
+            <h2 id="gallery">Projects</h2>
             <hr>
           </div>
         </div>
