--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>About</h2>
             <hr>
             <p class="text">
-              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="https://csl.sony.fr/member/stefan-lattner-phd/" target="_blank">Dr Stefan Lattner</a> on the topic "Timbre Tools for the Digital Instrument Maker." My research focuses are music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com" target="_blank">Xiaohongshu (RedNote)</a>.
+              I am working with <a href="http://eecs.qmul.ac.uk/people/profiles/saitischaralampos.html" target="_blank">Dr Charalampos Saitis</a> and <a href="https://csl.sony.fr/member/stefan-lattner-phd/" target="_blank">Dr Stefan Lattner</a> on music/timbre representations, neural audio synthesis, and creative AI tools for music. Previously I received my Master's degree in <a href="https://steinhardt.nyu.edu/degree/mm-music-technology" target="_blank">Music Technology</a> at NYU and I was a research intern at <a href="https://www.xiaohongshu.com" target="_blank">Xiaohongshu (RedNote)</a>.
             </p>
             <h2 id="conference-paper">Publications</h2>
             <hr>
@@ -79,7 +79,7 @@
               <li>
                 <p class="text-small-margin">
                   <b>Hybrid Losses for Hierarchical Embedding Learning</b>
-                  <<a href="https://arxiv.org/abs/2501.12796" target="_blank">arXiv</a>, <a href="https://github.com/tiianhk/label-metric" target="_blank">code</a>><br>
+                  <<a href="https://arxiv.org/abs/2501.12796" target="_blank">arxiv</a>, <a href="https://github.com/tiianhk/label-metric" target="_blank">code</a>><br>
                   <b>Haokun Tian</b>, Stefan Lattner, Brian McFee, Charalampos Saitis<br>
                   <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025</i><br>
                 </p>
@@ -90,7 +90,7 @@
         <!--Start Gallery-->
         <div class="flex-row">
           <div class="flex-item flex-column full-width">
-            <h2 id="gallery">Projects</h2>
+            <h2 id="gallery">Gallery</h2>
             <hr>
           </div>
         </div>
@@ -99,13 +99,11 @@
             <img src="img/maxmcp.gif">
             <h3>MaxMSP-MCP Server</h3>
             <div>
+              <p class="text-small-margin">
               w/ Shuoyang Zheng<br>
-              Enabling LLMs to directly understand and generate Max patches.
-            </div>
-            <div>
-              <a href="https://github.com/tiianhk/MaxMSP-MCP-Server" target="_blank">Code</a>
-              &nbsp;|&nbsp;
-              <a href="https://www.youtube.com/playlist?list=PLKP2B6jp8g27b1y9NFa_gqDK2x-tjYGkz" target="_blank">Video</a>
+              Enabling LLMs to directly understand and generate Max patches.<br>
+                <<a href="https://github.com/tiianhk/MaxMSP-MCP-Server" target="_blank">code</a>, <a href="https://www.youtube.com/playlist?list=PLKP2B6jp8g27b1y9NFa_gqDK2x-tjYGkz" target="_blank">video</a>>
+              </p>
             </div>
           </div>
         </div>
