--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                   <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2025</i><br>
                 </p>
               </li>
+              <li>
+                <p class="text-small-margin">
+                  <b>Assessing the Alignment of Audio Representations with Timbre Similarity Ratings</b><br>
+                  <b>Haokun Tian</b>, Stefan Lattner, Charalampos Saitis<br>
+                  <i>International Society for Music Information Retrieval Conference (ISMIR), 2025</i><br>
+                </p>
+              </li>
             </ol>
           </div>
         </div>
